--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -158,41 +158,25 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage LAI and density mediate light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
-This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b].
-
-The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]and needle-leaf forest floors receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute light in the form sunflecks--around 10-80% of of photon flux density-- to shaded forest regions that receive 1/3 of their carbon  during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995).
-
-These light regimes shape foliage at a vertical gradient, which in turn shapes the microenvironment. At a foliar level, resulting light-adaptation in the form of sun and shade leaf dichotomy also facilitates plant-adaptation to the light environment in the understory and the overstory, ultimately contributing to shaping the microenvironment, forest vertical-profile's thermal sensitivity and their response to warming  [@fauset_differences_2018; @millerOnlySunlitLeaves2021; @michaletzPlantThermoregulationEnergetics2015; *De Frenne et al. 2021*] 
+Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. This trend is mediated by foliage LAI and density, where the gradient is more prounced in broad-leaf forests than needle-leaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b; Chazdon & Fetcher, 1984; Smith et al., 2019; Tymen et al., 2017]. This is seen in tropical forest floors that receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], and mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006], compared to needle-leaf forest floors that receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute sunflecks to shaded forest regions that receive ~1/3 of their carbon during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
-Across all **#** forested NEON sites, wind speeds increased with height, with daily maximum wind speeds at the top of the averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. Understory wind-speed is also substantially reduced with increased canopy height [@juckerCanopyStructureTopography2018].
-Consistent with these results from NEON sites, higher wind speeds at greater heights within a forest canopy have been observed in both closed canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
+Across all **#** forested NEON sites, wind speeds increased with height, with daily maximum wind speeds at the top of the averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. Consistent with these results from NEON sites, higher wind speeds at greater heights within a forest canopy have been observed in both closed canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
 
 ### Air temperature 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies with foliage characteristics mentioned above, and water availability [@davisMicroclimaticBufferingForests2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively where they maintain cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory respectively, relatively more than pine and boreal forests, and nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. Similarly, when compared to neighboring tree crop agricultural plantations, intact tropical forests maintain lower understory peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity with greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [@ramboCanopyMicroclimateResponse2009]. Therefore, they maintain higher daytime maximum temperature and light availability in the understory that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009]. During the night, pine forests can maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. 
+The strength of this buffering varies is greater under dense-canopy forests than open-canopy forests [*Defrenne et al. 2021*]. Greater temperature offsets by dense forests allows them to maintain daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than pine and boreal forests, nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests tend to maintain higher daytime maximum temperature in the understory that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009] and  warmer nighttime understory temperatures than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
 
-Buffering is also affected by canopy roughness, turbulent air flow and the canopy boundary layer. As a result, taller trees upto 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaud [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
+Seasonally, buffering capacity increases with water availablity [@davis_microclimatic_2019] and is greater in wet than dry season, in tropical and temperate forests [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. However, under colder conditions, dense forest canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-forests and nearby clearings [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate] where greater radiative heat loss in exposed areas results in lower $T_{min}$. 
 
-Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. However, during the dry season of a semi-deciduous tropical forest in Panama, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
-
-Under colder conditions, minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; *Defrenne et al. 2021*] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
-
-
-*(Add something about risk of freeze.)* 
+Tree height also plays a role in buffering where trees upto 20m with higher LAI have shown to lower mean and max temperature and VPD in the understory. However, beyond a certain tree height, temperature and VPD offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
 
 ### Humidity and evaporative demand
-**Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**
-- DETAILS - REFS
-- @mcgregor_tree_nodate
-
-Along with temperature, forest canopies moderate relative humidity (RH) in below-canopy microclimates, which tends to decrease with increasing maximum temperature. In three European forests (Broadleaved, Non-Pine Conifer, Pine), canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. RH moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
-
-RH, in combination with temperature, determines vapor pressure deficit ($VPD$), an important metric expressing the driving force of water loss from a leaf. Atlantic forests in Brazil during the wet season tend to have higher $T_{air}$, and $VPD$ in the upper canopy and canopy gaps than in the understory where $T_{air}$ and $VPD$ tend to be lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017]. This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
+**Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
+Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity [RH] in the below-canopy compared low LAI forests and to nearby open areas. This trend is greater in wetter conditions, in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit (VPD), an important metric expressing the driving force of water loss from a leaf.  Tropical forests during the wet season tend to have higher VPD, therefore greater evaporative demand, in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
 
 ### Carbon dioxide
 
@@ -200,63 +184,50 @@ RH, in combination with temperature, determines vapor pressure deficit ($VPD$), 
 Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
 
 ### Geographic and climatic factors
+The strength of buffering also varies substantially with topography, climate and distance to waterbodies [@zellweger_seasonal_2019] where buffering capacity decreases with altitude, moving to open-forests  [@vonarxSpatiotemporalEffectsForest2012a; @rajsnerovaMorphologicalBiochemicalPhysiological2015; @liangForestTypeHeight2019]  and increases with wetter than drier regions [**REF**] and proximity to water such as in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
 
-With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In Switzerland forests, buffering capacity has shown to be stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a], partly because trees in these high-altitude forests are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] or have open canopies with greater light interception through canopy layers [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. 
-
-The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
 
 ## Leaf temperature 
 
 ### Biophysical drivers
 
 **Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-Leaves adapt to their biophysical environment. Maintaining optimum leaf temperature for metabolic optima in relation to their biophysical environment maximizes carbon assimilation in a given circumstance. This is done through the adaptation of leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. When leaves are cooler than air at high temperature and warmer than air at low temperature, they considered to exhibit limited homeothermy. When leaves are drastically warmer than $T_{air}$ such as sometimes in the upper canopy, this is considered megathermy. In some cases, $T_{leaf}$ can be equalled to $T_{air}$, showing poikiolothermic behavior [Cavaleri, 2020; @drakeNoEvidenceHomeostatic2020].
+
+Leaves adapt to their biophysical environment to maximize carbon assimilation by maintaining optimum leaf temperature in a given circumstance [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. As a result, leaves can exhibit 'limited homeothermy' where they are cooler than air at high temperature and warmer than air at low temperature or 'megathermy' where they are drastically warmer than $T_{air}$. In some cases, 'poikilothermy', where $T_{leaf}$ can be equalled to $T_{air}$ [@cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
+
+$T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. 2; @michaletzPlantThermoregulationEnergetics2015].
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-**(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, evaporative cooling sustains $T_{leaf}$ under increased $T_{air}$ [@cavaleriColdbloodedForestsWarming2020]. 
+Leaf temperature (and thermoregulation) is a tradeoff between water use strategy and optimum leaf temperature [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. Stomatal conductance ($g_s$)  largely influences $T_{leaf}$ by facilitating heat dissipation, whereas leaf water content affects the rate of leaf warming [@kochDiurnalPatternsLeaf1994a; @fauset_differences_2018]. With sufficient $g_s$ leaves can regulate their temperature in relation to their biophysical environment, but limitation to $g_s$, driven by irradiance, VPD or drought curbs heat dissipation, drastically increasing leaf temperature. 
 
-Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
-Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
-In low wind conditions, because $g_{a}$ to heat transfer is comparatively small, $T_{leaf}$ can become substantially elevated in relation to $T_{air}$ under high radiation [@martin_boundary_1999; @leighInfluenceLeafSize2017]. 
-Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata. This tends to be greater in the understory than in the canopy [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$. With maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, but $g_s$ limitation can cause solar radiation to substantially elevate $T_{leaf}$ greater than $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
+
+Greater upper canopy wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ by increasing boundary layer conductance ($g_a$) for exposed leaves [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, leaves exposed to higher wind speeds would be most effective at cooling with high $g_s$ [Drake et al. 2018]. At low wind conditions, small $g_a$ to heat transfer can increase $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017] where boundary layer resistance increases with thickness of air layer at the leaf surface. This tends to be greater in buffered leaves [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
-Leaf thermoregulation is a tradeoff between water use strategy and optimum leaf temperature, which is influenced by stomtal conductance that facilitates heat dissapation and leaf water content that affects the rate of leaf warming [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
-Under hot conditions, leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance [Drake et al. 2018].  However, during the midday, $T_{leaf}$ can become highly elevated above $T_{air}$ when $g_{s}$ or $g_{a}$ is low. This is caused by increase in air temperature and VPD driving greater leaf water demand than water transport, which limits stomatal conductance along with decreased leaf water content, therefore limiting heat dissapation [@kochDiurnalPatternsLeaf1994; @fauset_differences_2018]. On the other hand, buffered leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
+While stomatal conductance is inherently greater in exposed leaves than buffered shaded leaves, factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--are also greater with exposure. As a result, exposed leaves can experience steeper $g_s$ limitation than buffered leaves, driving an increase in $T_{leaf}$, further influenced by irradiance and $T_{air}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, due to inherently lower $g_s$ in shade leaves, they can remain cooler under buffered conditions and substantially warmer under exposed conditions. 
 
-**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** 
-*Smaller leaves have higher $g_{a}$ to heat transfer, allowing them to dissipate heat more efficiently than larger leaves [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017].  
-While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open, and significantly hotter under high radiation or $T_{air}$ with stomata closed [@leighInfluenceLeafSize2017]. 
-
+**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.**  Smaller leaves have higher $g_{a}$ to heat transfer, therefore remain within a few degrees of $T_{air}$,  *with coolest leaves at intermediate sizes (~10mm)* [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017]. Whereas, regardless of $g_s$, large leaves (with greater leaf width) can be significantly cooler than T_air under low radiation with stomata open, and significantly hotter under high radiation or $T_{air}$ with stomata closed  [@leighInfluenceLeafSize2017; @fauset_differences_2018].
 
 ### In-situ observations
-
 **Vertical profiles in microclimate (Fig. `r fig_NEON_vertical`), leaf traits (see following section), and *evapotranspiration* (*where is this discussed? and do we say anything about evaporation?*) together shape in-situ leaf temperatures according to the principles outlined above (Fig. `r fig_leaf_T`).** 
-Canopy buffering capacity, as well vertical biophysical gradient, affect vertical distribution of leaf temperature. While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
+Canopy buffering capacity and biophysical gradient affect vertical distribution of leaf temperature. 
 
-Particularly, in open forests with sparse distribution of trees and lower buffering capacity, as observed in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of either increased vertical air mixing or heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in open Australian desert trees [@curtis_intracanopy_2019] and among timberline krummholz needle-leaf trees, both growing close to the ground [@hadleyInfluenceKrummholzMat1987], this is analogous to greenhouse effect caused under dense lower canopies.  Similarly, in dry conditions, in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. In other tropical dry conditions, inner canopy can be warmer than above canopy and air temperature due to conditions of greater relative humidity [@dietzVerticalPatternsDuration2007]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+Open-forests with lower LAI or buffering capacity, can have greater lower canopy $T_{leaf}$ than upper canopy, reflecting microclimate conditions of vertical air mixing, heating from the ground, light permeating through canopy layers and still air in the lower canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. In other conditions, increase in relative humidity can increase inner canopy $T_{leaf}$  relatively more than above canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. Similarly, open trees growing close to the ground can experience greater heat stress and $T_{air}$ in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
-At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
+**However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** Especially in closed-canopy forests with increased buffering capacity, large $T_{leaf} - T_{air}$ increases with height where higher $T_{leaf}$ are found in the upper canopies than lower canopies, caused by midday stomatal closure [Slot et al. 2019]. This is seen in tropical forests [@fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a], semi-deciduous tropical forest during the wet season [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a]. 
 
-**However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
-Especially in closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies compared to lower canopies, caused by midday stomatal closure that reduces transpirational cooling [Slot et al. 2019]. This is seen in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a].   
+Greater light input in exposed upper canopy leaves can exceed $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$ making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. Across forest types, temperate deciduous upper canopy $T_{leaf}$ - $T_{air}$ was observed to be greater than upper canopies of tropical moist and wet [@mauTemperateTropicalForest2018a]
 
-In three forest types- US temperate deciduous, Puerto Rico tropical wet and tropical moist, $T_{leaf_{max}}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in the upper canopies of all three forests, with increasing $T_{leaf}$ - $T_{air}$  with height. $T_{leaf}$ - $T_{air}$ was observed to be greatest in temperate deciduous forest compared to tropical moist and wet. Greater light input in exposed upper canopy leaves can sometimes elevate leaf temperature $1-7{^\circ}C$ above air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a] 
 
-**Stability of $T_{leaf}$ varies with fluctuation in biophysical conditions**
-Biophysical environment fluctuation dictates how stable $T_{leaf}$ is, where stable biophysical conditions, for eg. low wind speed and consistent $T_{air}$ can prolong $T_{leaf}$, consistently reducing stomatal conductance and photosynthesis while increasing $T_{leaf}$, and therefore reducing chances for leaf recovery. However, increase in biophysical fluctuations, for eg. wind speed, cloud mediated irradiance fluctuation and $T_{air}$  make $T_{leaf}$ unstable as seen in upper canopies where with available water unstable $T_{leaf}$ can be more manageable at peak irradiance and $T_{air}$ than in stable buffered canopy regions [**REF**] ~this understanding needs more help from co-authors, should this be included? (thermal time constant?)~ 
+### Leaf traits 
 
-## Leaf traits 
-
-**Leaf thermoregulation largely depends on leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light and water demand, in order to optimize C uptake, thermoregulate and balance metabolism, across forest vertical strata, and thus show different degrees foliar plasticity [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
+**Leaf thermoregulation is mediated by leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light and water demand, in order to optimize C uptake, thermoregulate and balance metabolism, across forest vertical strata, and thus show different degrees foliar plasticity [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
 
 #### *(clarify light vs height - 1 paragraph)*
 
-Leaf morphological adaptation to the local microenvironement takes place during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004]. Degrees of direct to diffused light and consequental water demands shape sun vs. shade leaves and their necessary vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. Therefore, exposed sun leaves are typically smaller in size and width, thicker, hairier and have greater lobation, and buffer biophysical conditions for shade leaves. Whereas shade leaves adapt to diffused light and stable microenvironment through investing in light capture efficiency by expanding specific leaf area (SLA) [@zwienieckiHydraulicLimitationsImposed2004; @rozendaalPlasticityLeafTraits2006; @mathurPhotosyntheticEfficiencySun2018a]. Respective leaf traits also play a role in heat dissapation where exposed sun leaves are more efficient in dissapting heat than buffered shade leaves [@vogelConvectiveCoolingLow1970].
-
-Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
+Leaf morphological adaptation to the local microenvironement takes place during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004]. Degrees of direct to diffused light and consequental water demands shape sun vs. shade leaves and their necessary vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. Therefore, exposed sun leaves are typically smaller in size and width, thicker, hairier and have greater lobation, and buffer biophysical conditions for shade leaves. Whereas shade leaves adapt to diffused light and stable microenvironment through investing in light capture efficiency by expanding specific leaf area (SLA) [@zwienieckiHydraulicLimitationsImposed2004; @rozendaalPlasticityLeafTraits2006; @mathurPhotosyntheticEfficiencySun2018a]. Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. Since canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`) it is unsuprising, then, that leaf traits vary dramatically across vertical gradients. 
 
 While light based acclimation in leaf traits is well established, research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
 
